Fixed homepage text covering navbar dropdown on mobile

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -56,6 +56,10 @@ h4 {
     display: none;
 }
 
+.mobile-nav-overlay {
+    z-index: 999 !important;
+}
+
 /*  =====================================================================
     Create new Event Sheets
     ===================================================================== */
